mark pages as not to be indexed for search

--- a/content/404.html
+++ b/content/404.html
@@ -1,6 +1,7 @@
 ---
 title: Resource Not Found
 sitemap: false
+index: false
 ---
 <div class="alert alert-error">
 The resource you requested does not exist.
