--- a/content/searcherview.html
+++ b/content/searcherview.html
@@ -5,5 +5,6 @@ navigation_erb_injection_before: '@search_navigation'
 head_erb_injection: '@head'
 nohead: true
 search_inject_variable: '@q'
+index: false
 ---
 <%= yield %>
