howto: note prerequisites on MacOS X

--- a/content/howto.html
+++ b/content/howto.html
@@ -112,6 +112,15 @@ rush optipng</pre>
 ml2-devel libxslt-devel ImageMagick-devel \
 rush optipng</pre>
 
+<h4>On MacOS X</h4>
+<p>
+  Use <a href="http://mxcl.github.com/homebrew/">homebrew</a> to install
+  the following packages:
+</p>
+<pre>
+  brew install imagemagick jpeg libmagic libpng optipng pngcrush
+</pre>
+
 <a name="git-clone"></a>
 <h3>Checking out the website</h3>
 <p>
