howto: update git clone instructions to use git@
Git users who otherwise have no need for an account on apeiron now share
a single 'git' account with everyone's principals in its .k5login.

--- a/content/howto.html
+++ b/content/howto.html
@@ -173,13 +173,6 @@ Dec  7 11:26:00 2012    Dec  8 11:25:56 2012  krbtgt/FOSDEM.ORG@FOSDEM.ORG
 </p>
 
 <p>
-  To do so, you need to have access to <code class="host">git.fosdem.org</code>
-  using <code>ssh</code> (if not, please <a
-  href="mailto:server@fosdem.org?subject=Account on apeiron">contact our
-  server team by email</a>).
-</p>
-
-<p>
   To clone the sources initially, create a working directory on your local
   system, e.g.:
 </p>
@@ -193,12 +186,7 @@ Dec  7 11:26:00 2012    Dec  8 11:25:56 2012  krbtgt/FOSDEM.ORG@FOSDEM.ORG
 <p>
   Now use <code>git</code> to clone the repository:
 </p>
-<pre>git clone YOUR_USERNAME_ON_GIT@git.fosdem.org:/srv/git/website.git</pre>
-
-<p>
-  Obviously, replace <code>YOUR_USERNAME_ON_GIT</code> with your username on
-  <code class="host">git.fosdem.org</code>.
-</p>
+<pre>git clone git@git.fosdem.org:/srv/git/website.git</pre>
 
 <p>
   Finally, go to the subdirectory <code class="dir">website/</code> that has
