howto: update prerequisites for Debian
Just tried to install the website toolchain on a fresh Debian laptop.
This list of packages reflects my recent experience.  From memory.

--- a/content/howto.html
+++ b/content/howto.html
@@ -153,10 +153,10 @@ PreferredAuthentications gssapi-with-mic
 <p>
   Install the following development packages (as <code>root</code>):
 </p>
-<pre>apt-get install \
- bzip2 gcc libssl-dev libpq-dev libz-dev libxml2-dev libxslt-dev \
-agic-dev libmagick++-dev libmagickcore-dev libmagickwand-dev \
-rush optipng</pre>
+<pre>
+# apt-get install build-essential bzip2 libssl-dev libxml2-dev libxslt-dev \
+libmagic-dev libmagickcore-dev libmagickwand-dev libpq-dev optipng pngcrush zlib1g-dev
+</pre>
 
 <h4>On openSUSE</h4>
 <p>
