--- a/content/index.html
+++ b/content/index.html
@@ -36,9 +36,9 @@ visual: true
 
   <div class="news-block">
     <h2>CALL FOR PARTICIPATION</h2>
-    <p>While the Developer Rooms have already been decided for this
+    <p>While the developer rooms and main tracks have already been decided for this
     edition, the <a href="page:news/2012-11-01-cfp/">call for participation</a> is still open for
-    lightning talks, main tracks and stands.</p>
+    lightning talks and stands.</p>
   </div>
 
   <div class="news-block">
