promote: remove spaces, add index.html

--- a/content/support/promote.html
+++ b/content/support/promote.html
@@ -1,15 +1,15 @@
 ---
 title: Promote
 ---
-<h2>Flyers, ads and banners for <%= conference[:name] %></h2>
+<h2>Flyers, posters and banners</h2>
 
 <p>These are some <a href="#flyers">flyers</a> to print and <a href="#banners">banners</a> to add
 to your personal (or Free or Open Source project) website in order to reference FOSDEM.</p>
 
 <p>Feel free to use them to promote the event and <a href="page:contact">contact us</a> so
-we can talk about you as well !</p>
+we can talk about you as well!</p>
 
-<p>Our news page has an <a href="page:atom">RSS feed</a>. Feel free to aggregate it !</p>
+<p>Our news page has an <a href="page:atom">RSS feed</a>. Feel free to aggregate it!</p>
 
 <a name="flyers"></a><h2>Flyers</h2>
 <p>A flyer for you to print and distribute. We usually print 2 flyers per A4 format page.</p>
@@ -41,7 +41,8 @@ we can talk about you as well !</p>
         </tr>
     </tbody>
 </table>
-<p>Some good ideas of places to spam are:</p>
+
+<p>Some good ideas for places to spam are:</p>
 <ul>
     <li>Computer store</li>
     <li>Geek friends and fellow hackers</li>
