--- a/content/schedule.html
+++ b/content/schedule.html
@@ -18,6 +18,7 @@ distroevents = events.select{|e| e[:type] == 'devroom' and e[:track].casecmp('cr
 devrooms = tracks.select{|t| t[:type] == 'devroom'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
 lt_track = tracks.select{|t| t[:type] == 'lightningtalk'}.first
 ltalks = events.select{|e| e[:type] == 'lightningtalk'}.sort_by{|e| e[:start_datetime]}
+certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_datetime]}
 %>
 <p>Every year, FOSDEM hosts a wide variety of activities.
 An overview with links to further information about the
@@ -60,38 +61,40 @@ collected over the weekend.</p>
 <p>For this edition, the keynotes are as follows:</p>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
+      <tr>
         <th>Title</th>
         <th>Speaker(s)</th>
         <th>Day</th>
         <th>When</th>
         <th>Room</th>
+      </tr>
     </thead>
     <tbody>
         <% keynotes.each do |e| %>
         <tr>
-          <td><%= l e %></td>
-            <td><%=
-                e[:speakers].map{|s| $item_by_id.fetch("/schedule/speaker/#{s}/")}.map do |s|
-                  photo = if s[:thumbnail]
-                            $item_by_id.fetch(s[:thumbnail].fetch(:identifier))
-                          else
-                            nil
-                          end
-                  text = ""
-                  text << "<img class=\"thumb\" src=\"#{photo.path}\" width=\"#{photo[:width]}\" height=\"#{photo[:height]}\"/>" if photo
-                  text << l(s)
-                  text
-                end.join(", ")
-                %></td>
-            <td><%= l(day(e[:day])) %></td>
-            <td><%= e[:start_time] %> - <%= e[:end_time] %></td>
-            <td><%= l(room(e[:room])) %></td>
-        </tr>
-        <% end %>
-    </tbody>
+        <td><%= l e %></td>
+          <td><%=
+              e[:speakers].map{|s| $item_by_id.fetch("/schedule/speaker/#{s}/")}.map do |s|
+                photo = if s[:thumbnail]
+                          $item_by_id.fetch(s[:thumbnail].fetch(:identifier))
+                        else
+                          nil
+                        end
+                text = ""
+                text << "<img class=\"thumb\" src=\"#{photo.path}\" width=\"#{photo[:width]}\" height=\"#{photo[:height]}\"/>" if photo
+                text << l(s)
+                text
+              end.join(", ")
+              %></td>
+          <td><%= l(day(e[:day])) %></td>
+          <td><%= e[:start_time] %> - <%= e[:end_time] %></td>
+          <td><%= l(room(e[:room])) %></td>
+      </tr>
+      <% end %>
+  </tbody>
 </table>
 <% else %>
-  <p><span class="label label-info">The keynotes have not been confirmed yet.</span></p>
+<p><span class="label label-info">The keynotes have not been confirmed yet.</span></p>
 <% end %>
 
 <h3><a name="maintracks"></a>Main Tracks</h3>
@@ -101,29 +104,31 @@ speakers on those topics.</p>
 <% unless maintracks.empty? %>
 <p>For this edition the main tracks are:</p>
 <table class="table table-striped table-bordered table-condensed">
-    <thead>
-        <th>Track</th>
-        <% days.each do |d| %>
+  <thead>
+    <tr>
+      <th>Track</th>
+      <% days.each do |d| %>
         <th><%= d[:title] %></th>
-        <% end %>
-    </thead>
-    <tbody>
-        <% maintracks.each do |t| %>
-        <tr>
-            <td><%= l t %></td>
-            <%
-            days.each do |d|
+      <% end %>
+    </tr>
+  </thead>
+  <tbody>
+    <% maintracks.each do |t| %>
+      <tr>
+        <td><%= l t %></td>
+        <%
+          days.each do |d|
             rooms = t[:events_per_room_per_day].fetch(d[:slug].to_sym, {}).keys
-            %>
-            <% unless rooms.empty? %>
+          %>
+          <% unless rooms.empty? %>
             <td><%= rooms.map(&$to_room).map{|r| l(r) + (r[:occupation_by_day] ? ": #{r[:occupation_by_day][d[:slug].to_sym][:start_time]}-#{r[:occupation_by_day][d[:slug].to_sym][:end_time]}" : "")}.join(', ') %></td>
-            <% else %>
+          <% else %>
             <td>-</td>
-            <% end %>
-            <% end %>
-        </tr>
+          <% end %>
         <% end %>
-    </tbody>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 <% else %>
 <p><span class="label label-info">Main tracks have not been confirmed yet.</span></p>
@@ -200,5 +205,43 @@ as is the wide variety of the topics.</p>
 <h3><a name="certification"></a>Certification</h3>
 <p>Several certification organizations provide FOSDEM visitors with the opportunity of taking certification
 exams during the conference.</p>
-<p><span class="label label-info">Certification exams have been scheduled yet.</span></p>
+<% unless certs.empty? %>
+  <%
+    h = {}
+    certs.each do |c|
+      family = c[:title].gsub(/\s+\d+$/, '').gsub(/\s+session$/i, '').gsub(/\s+exam$/i, '')
+      h[family] = [] unless h.has_key? family
+      h[family] << c
+    end
+  %>
+  <p>The following type<%= h.keys.size > 1 ? 's' : '' %> of exams are available at
+  <%= conference()[:title] %><% if h.keys.size > 1 %>, in alphabetical order<% end %>:</p>
+  <table class="table table-striped table-bordered table-condensed">
+    <thead>
+      <tr>
+        <th>Session</th>
+        <th>Room</th>
+        <th>Day</th>
+        <th>When</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% h.keys.sort.each do |family| %>
+        <tr>
+          <th colspan="4"><h4><%= family %></h4></th>
+        </tr>
+        <% h[family].sort_by{|s| [s[:conference_day_id], s[:start_time]]}.each do |e| %>
+          <tr>
+            <td><%= l(e) %></td>
+            <td><%= l(room(e[:room])) %></td>
+            <td><%= e[:day_name] %></td>
+            <td><%= e[:start_time] %> - <%= e[:end_time] %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    <% end %>
+  </table>
+<% else %>
+  <p><span class="label label-info">Certification exams have been scheduled yet.</span></p>
+<% end %>
 
