--- a/content/certification.html
+++ b/content/certification.html
@@ -1,24 +1,77 @@
 ---
 title: Certification Exams
 ---
+<%
+# vim: set ts=2 sw=2 et ai ft=eruby:
+# encoding: utf-8
+require 'time'
+
+days = @items.select{|i| i.identifier =~ %r{/schedule/day/.+}}
+speakers = @items.select{|i| i.identifier =~ %r{/schedule/speaker/.+}}
+events = @items.select{|i| i.identifier =~ %r{/schedule/event/.+}}
+tracks = @items.select{|i| i.identifier =~ %r{/schedule/track/.+}}
+keynotes = events.select{|e| e[:type] == 'keynote'}.sort_by{|e| e[:start_datetime]}
+maintracks = tracks.select{|t| t[:type] == 'maintrack'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
+distroevents = events.select{|e| e[:type] == 'devroom' and e[:track].casecmp('crossdistribution') == 0}
+devrooms = tracks.select{|t| t[:type] == 'devroom'}.sort_by{|t| [ t[:rank], t[:conference_track_id] ] }
+lt_track = tracks.select{|t| t[:type] == 'lightningtalk'}.first   
+ltalks = events.select{|e| e[:type] == 'lightningtalk'}.sort_by{|e| e[:start_datetime]}
+certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_datetime]}
+%>
 
 <p>
   A number of certification exams are offered at <%= conference()[:title] %>.
 </p>
 
 <p>
-  The <a href="http://lpi.org/">Linux Professional Institute</a>, the <a
-  href="http://bsdca.org/">BSD Certification Group</a> and <a
-  href="http://certification.typo3.com/">TYPO3</a> will organise exam sessions
-  during <%= conference()[:title] %>.  Interested candidates will be able to
+  The <a href="http://lpi.org/">Linux Professional Institute</a> and the <a
+  href="http://bsdca.org/">BSD Certification Group</a>
+  will organise exam sessions during <%= conference()[:title] %>.  
+  Interested candidates will be able to
   register for exams with the respective certification groups.
 </p>
 
-<p>
-  <span class="label label-info">
-    The schedule for exam sessions is not yet available.
-  </span>
-</p>
+<% unless certs.empty? %>
+  <%
+    h = {}
+    certs.each do |c|
+      family = c[:title].gsub(/\s+\d+$/, '').gsub(/\s+session$/i, '').gsub(/\s+exam$/i, '')
+      h[family] = [] unless h.has_key? family
+      h[family] << c
+    end
+  %>
+  <p>The following type<%= h.keys.size > 1 ? 's' : '' %> of exams are available at
+  <%= conference()[:title] %><% if h.keys.size > 1 %>, in alphabetical order<% end %>:</p>
+  <table class="table table-striped table-bordered table-condensed">
+    <thead>
+      <tr>
+        <th>Session</th>
+        <th>Room</th>
+        <th>Day</th>
+        <th>When</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% h.keys.sort.each do |family| %>
+        <tr>
+          <th colspan="4"><h4><%= family %></h4></th>
+        </tr>
+        <% h[family].sort_by{|s| [s[:conference_day_id], s[:start_time]]}.each do |e| %>
+          <tr>
+            <td><%= l(e) %></td>
+            <td><%= l(room(e[:room])) %></td>
+            <td><%= e[:day_name] %></td>
+            <td><%= e[:start_time] %> - <%= e[:end_time] %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    <% end %>
+  </table>
+<% else %>
+  <p><span class="label label-info">Certification exams have been scheduled yet.</span></p>
+<% end %>
+
+<img src="asset:lpi-big" alt="" style="float:right; margin-left: 1em; margin-right: 1em;"/>
 
 <h3>
   LPI offers discounted certification exams at <%= conference()[:title] %>.
@@ -37,7 +90,7 @@ title: Certification Exams
   or French (LPIC 101 and 102 only).
 </p>
 
-<table>
+<table class="table table-striped table-bordered table-condensed">
   <tr>
     <th>Certification</th>
     <th>Price</th>
@@ -59,3 +112,9 @@ title: Certification Exams
     <td>&euro; 90.00</td>
   </tr>
 </table>
+
+<p>
+  <span class="label label-info">
+    The registration procedure for exam sessions is yet to be announced.
+  </span>
+</p>
