--- a/content/certification.html
+++ b/content/certification.html
@@ -19,41 +19,9 @@ certs = events.select{|e| e[:type] == 'certification'}.sort_by{|e| e[:start_date
 </p>
 
 <% unless certs.empty? %>
-  <%
-    h = {}
-    certs.each do |c|
-      family = c[:title].gsub(/\s+\d+$/, '').gsub(/\s+session$/i, '').gsub(/\s+exam$/i, '')
-      h[family] = [] unless h.has_key? family
-      h[family] << c
-    end
-  %>
-  <p>The following type<%= h.keys.size > 1 ? 's' : '' %> of exams are available at
-  <%= conference()[:title] %><% if h.keys.size > 1 %>, in alphabetical order<% end %>:</p>
-  <table class="table table-striped table-bordered table-condensed">
-    <thead>
-      <tr>
-        <th>Session</th>
-        <th>Room</th>
-        <th>Day</th>
-        <th>When</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% h.keys.sort.each do |family| %>
-        <tr>
-          <th colspan="4"><h4><%= family %></h4></th>
-        </tr>
-        <% h[family].sort_by{|s| [s[:conference_day_id], s[:start_time]]}.each do |e| %>
-          <tr>
-            <td><%= l(e) %></td>
-            <td><%= l(room(e[:room])) %></td>
-            <td><%= e[:day_name] %></td>
-            <td><%= e[:start_time] %> - <%= e[:end_time] %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    <% end %>
-  </table>
+  <p>
+    The <a href="<%= pathof '/schedule/' %>#certification">schedule for the
+    exam sessions</a> is now available.</p>
 <% else %>
   <p><span class="label label-info">Certification exams have not been scheduled yet.</span></p>
 <% end %>
