schedule: add forgotten "not"s to labels

--- a/content/schedule.html
+++ b/content/schedule.html
@@ -199,7 +199,7 @@ as is the wide variety of the topics.</p>
 <% unless ltalks.empty? %>
 <p>There are currently <a href="<%= lt_track.path %>"><%= ltalks.size %> lightning talks in the schedule</a>.</p>
 <% else %>
-<p><span class="label label-info">Lightning talks have been scheduled yet.</span></p>
+<p><span class="label label-info">Lightning talks have not been scheduled yet.</span></p>
 <% end %>
 
 <h3><a name="certification"></a>Certification</h3>
@@ -242,6 +242,6 @@ exams during the conference.</p>
     <% end %>
   </table>
 <% else %>
-  <p><span class="label label-info">Certification exams have been scheduled yet.</span></p>
+  <p><span class="label label-info">Certification exams have not been scheduled yet.</span></p>
 <% end %>
 
